<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="17dp"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editEmployee"
        android:ems="10"
        android:gravity="top" />

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="0.18"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editLname"
        android:ems="10"
        android:gravity="top" />

    <EditText
        android:id="@+id/editEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLname"
        android:layout_below="@+id/header"
        android:ems="10"
        android:gravity="top" >
        <requestFocus />
        </EditText>

    <TextView
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editLname"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/lname" />

    <TextView
        android:id="@+id/phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editPhone"
        android:layout_alignLeft="@+id/lname"
        android:text="@string/phone_num" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phone_num"
        android:layout_below="@+id/phone_num"
        android:layout_marginTop="18dp"
        android:text="@string/address" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/address"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editLname"
        android:layout_alignParentLeft="true"
        android:text="@string/fname" />

    <Button
        android:id="@+id/save_em_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/my_bg"
        android:text="@string/save" />

</RelativeLayout>