<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="17dp"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/viewLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/viewEmployee"
        android:ems="10"
        android:gravity="top" />

    <TextView
        android:id="@+id/headerData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_weight="0.18"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/viewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/viewLname"
        android:ems="10"
        android:gravity="top" />

    <TextView
        android:id="@+id/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/viewLname"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/lname" />

    <TextView
        android:id="@+id/phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/viewPhone"
        android:layout_alignLeft="@+id/lname"
        android:text="@string/phone_num" />

    <TextView
        android:id="@+id/viewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/address"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewLname"
        android:layout_alignParentLeft="true"
        android:text="@string/fname" />

    <TextView
        android:id="@+id/viewEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/headerData"
        android:ems="10"
        android:gravity="top" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/phone_num"
        android:layout_marginTop="26dp"
        android:text="@string/address" />

</RelativeLayout>