<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="469dp" >

            <TextView
                android:id="@+id/dateDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="74dp"
                android:layout_marginTop="34dp"
                android:layout_toLeftOf="@+id/pickDate"
                android:text="" />

            <Button
                android:id="@+id/pickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/dateDisplay"
                android:layout_alignParentRight="true"
                android:layout_marginRight="84dp"
                android:background="@drawable/my_bg"
                android:text="เปลี่ยนวัน" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/amount_water_View"
                android:layout_alignBottom="@+id/amount_water_View"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:text="@string/kilo" />

            <EditText
                android:id="@+id/amount_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignRight="@+id/pickDate"
                android:layout_toRightOf="@+id/textView16"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/amount_water_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/dateDisplay"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/amount_water" />

            <TextView
                android:id="@+id/amount_sheet_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/amount_water_View"
                android:layout_below="@+id/amount_water_View"
                android:layout_marginTop="26dp"
                android:text="@string/amount_sheet" />

            <EditText
                android:id="@+id/amount_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/amount_sheet_View"
                android:layout_alignLeft="@+id/amount_water"
                android:layout_alignRight="@+id/amount_water"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/amount_lump_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/amount_sheet_View"
                android:layout_below="@+id/amount_sheet_View"
                android:layout_marginTop="25dp"
                android:text="@string/amount_lump" />

            <EditText
                android:id="@+id/amount_lump"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/amount_lump_View"
                android:layout_alignLeft="@+id/amount_sheet"
                android:layout_alignRight="@+id/amount_sheet"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/amount_lump_View"
                android:layout_alignBottom="@+id/amount_lump_View"
                android:layout_alignLeft="@+id/textView4"
                android:text="@string/kilo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/amount_lump_View"
                android:layout_alignLeft="@+id/textView2"
                android:text="@string/kilo" />

            <TextView
                android:id="@+id/amount_scrap_View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/amount_lump_View"
                android:layout_below="@+id/amount_lump_View"
                android:layout_marginTop="25dp"
                android:text="@string/amount_scrap" />

            <EditText
                android:id="@+id/amount_scrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/amount_scrap_View"
                android:layout_alignLeft="@+id/amount_lump"
                android:layout_alignRight="@+id/amount_lump"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/amount_scrap_View"
                android:layout_alignBottom="@+id/amount_scrap_View"
                android:layout_alignRight="@+id/textView6"
                android:text="@string/kilo" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/amount_scrap_View"
                android:layout_below="@+id/amount_scrap_View"
                android:layout_marginTop="25dp"
                android:text="@string/percent_employee" />

            <EditText
                android:id="@+id/PercentEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView9"
                android:layout_alignLeft="@+id/amount_scrap"
                android:layout_alignRight="@+id/amount_scrap"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/EditText00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/PercentEmployee"
                android:layout_alignRight="@+id/textView8"
                android:text="%" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView9"
                android:layout_below="@+id/textView9"
                android:layout_marginTop="26dp"
                android:text="@string/percent_boss" />

            <EditText
                android:id="@+id/PercentBoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView11"
                android:layout_alignLeft="@+id/PercentEmployee"
                android:layout_alignRight="@+id/PercentEmployee"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/PercentBoss"
                android:layout_alignRight="@+id/EditText00"
                android:text="%" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView11"
                android:layout_below="@+id/textView11"
                android:layout_marginTop="26dp"
                android:text="@string/total_price" />

            <TextView
                android:id="@+id/TotalEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView16"
                android:layout_alignBottom="@+id/textView16"
                android:layout_alignLeft="@+id/Total"
                android:text="" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TotalEmployee"
                android:layout_alignLeft="@+id/textView15"
                android:text="@string/bath" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView16"
                android:layout_below="@+id/textView16"
                android:layout_marginTop="25dp"
                android:text="@string/price_boss" />

            <TextView
                android:id="@+id/TotalBoss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView19"
                android:layout_alignLeft="@+id/TotalEmployee"
                android:text="" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TotalBoss"
                android:layout_alignBottom="@+id/TotalBoss"
                android:layout_alignRight="@+id/textView18"
                android:text="@string/bath" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/Total"
                android:layout_alignBottom="@+id/Total"
                android:layout_alignRight="@+id/textView12"
                android:text="@string/bath" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView13"
                android:layout_below="@+id/textView13"
                android:layout_marginTop="27dp"
                android:text="@string/price_employee" />

            <TextView
                android:id="@+id/Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView16"
                android:layout_alignRight="@+id/PercentBoss"
                android:text="" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/dateDisplay"
                android:layout_alignLeft="@+id/amount_water_View"
                android:text="" />

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4.11" >

        <Button
            android:id="@+id/Cal_btn"
            style="android:buttonStyle "
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_bg"
            android:text="@string/cal" />

        <Button
            android:id="@+id/Save_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_bg"
            android:text="@string/save" />

        <Button
            android:id="@+id/List_Save_btn"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:background="@drawable/my_bg"
            android:text="@string/list_save" />

    </LinearLayout>

</LinearLayout>